--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1784,6 +1784,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdasdadsda"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
    "outputs": [],
