--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1952,14 +1952,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
     "\n",
     "#Create a svm Classifier\n",
-    "clf = svm.SVC(kernel='linear', gamma='scale') # Linear Kernel\n",
+    "clf = svm.SVC(kernel='rbf', C=10, gamma=16) # Linear Kernel\n",
     "\n",
     "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
@@ -1970,14 +1970,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score: 0.8913223140495867\n"
+      "F1 score: 0.9804438139629142\n"
      ]
     }
    ],
@@ -2041,23 +2041,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyerparameters:\n",
+      " {'C': 10, 'gamma': 16, 'kernel': 'rbf'}\n",
+      "Best CV accuracy\n",
+      "Test set accuracy of best model: 0.980\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "param_grid = {'kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
-    "              'C' : [1, 10, 100, 1000, 10000, 100000, 1000000],\n",
-    "              'degree': [1, 2, 3, 4, 5],\n",
-    "              'gamma': ['scale', 'auto', 1, 10.0, 100.0, 1000.0],\n",
-    "              'decision_function_shape': [ 'ovo', 'ovr'],\n",
-    "              'break_ties': [True, False]\n",
+    "param_grid = {'kernel': ['rbf'],\n",
+    "              'C' : [1,10,100],\n",
+    "#              'degree': [1, 2, 3], alleen relevant voor polynominal\n",
+    "              'gamma': [16, 17, 18],\n",
+    "#              'decision_function_shape': [ 'ovo', 'ovr'], Maakt niet uit voor binary probleem\n",
+    "#              'break_ties': [True, False] geen multiclass probleem dus niet relevant\n",
     "              }\n",
     "\n",
     "grid_dt = GridSearchCV(svm.SVC(),\n",
     "                       param_grid=param_grid,\n",
     "                       scoring='f1',\n",
-    "                       cv=10,\n",
+    "                       cv=5,\n",
     "                       n_jobs=-1)\n",
     "\n",
     "grid_dt.fit(X_train, y_train)\n",
