SVM uitleg verder toegevoegd

--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1368,7 +1368,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## under_sampling.InstanceHardnessThreshold"
+    "## InstanceHardnessThreshold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dit werkt beter voor SVMs"
    ]
   },
   {
@@ -2025,13 +2032,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 253,
    "metadata": {},
    "outputs": [],
@@ -2039,7 +2039,7 @@
     "from sklearn import svm\n",
     "\n",
     "#Create a svm Classifier\n",
-    "clf = svm.SVC(kernel='rbf', C=100) # Linear Kernel\n",
+    "clf = svm.SVC(kernel='rbf', C=100)\n",
     "\n",
     "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
@@ -2070,13 +2070,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2086,31 +2079,57 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### 3.3.2 Toon de wiskundig formule voor de loss functie en ligt deze toe"
+    "Een SVM werkt door data in kaart te kunnen brengen op in een hogere dimensie. Stel je een grafiek voor waar een lijn doorheen gaat om te classes te bepalen, een svm kan hier extra dimensies aan toevoegen waardoor het bij 1 extra bijvoorbeeld een vlak wordt.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### 3.3.3 Benoem de vormen van regularisatie die van toepassing zijn op dit model. Leg aan de hand van wiskundige formules uit hoe iedere vorm werkt en wat het effect is van iedere vorm"
+    "**Rekenvoorbeeld en kernel trick uitleg**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 3.3.2 De wiskundig formule voor de loss functie en de regularisatie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\min_{\\mathbf{w}, b, \\xi} \\frac{1}{2} ||\\mathbf{w}||^2 + C \\sum_{i=1}^{n} \\max(0, 1 - y_i f(\\mathbf{x}_i)) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Toelichting: \n",
+    "1. **L2 Regularisatie** \n",
+    "```math\n",
+    "\\left(\\frac{1}{2} ||\\mathbf{w}||^2\\right)\n",
+    "```\n",
+    "   - Dit zorgt voor kleine gewichten, het maximaliseerd de marge tussen de 2 classes. Een kleinere ||w|| betekent een kleinere marge, dit zorgt voor meer generalisatie en minder overfitting.\n",
+    "\n",
+    "\n",
+    "2. **C Parameter of \"Soft Margin Regularisatie\" (C=100)**:\n",
+    "   - Een hoge C waarde (in dit geval, 100) betekent dat het model een hogere nadruk legt op het minimaliseren van foute classificaties.\n",
+    "   - Dit zou kunnen leiden to overfitten als het model te goed leert te werken op de trainingdata, dit komt doordat de 'decision boundary' te complex wordt om te generaliseren. In ons geval werkt dit nog vrij goed.\n",
+    "\n",
+    "3. **Hinge Loss** \n",
+    "```math\n",
+    "\\left(\\max(0, 1 - y_i f(\\mathbf{x}_i))\\right)\n",
+    "```\n",
+    "\n",
+    "   - De hinge loss zorgt er voor dat de punten die correct geclassificeerd zijn buiten het marge geen loss toevoegen.\n",
+    "   - Als een punt binnen de marge of fout geclassificeerd is, groeit de loss exponentieel in proportie met hoe fout die is.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2432,7 +2451,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
