--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1757,6 +1757,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standaardiseren van de data zorgt ervoor dat de schaal overal gelijk is. Dit zorgt ervoor dat een kolom met een andere schaal niet veel te veel of veel te weinig invloed heeft op het model. Dit is vooral belangrijk voor afstandgebasseerde algoritmes zoals k-NN en SVM die we hier gebruiken. Voor Tree gebaseerde modellen of categorische variabelen is dit vaak niet nodig."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
@@ -1786,13 +1793,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
