Kleine uitleg voor smote en IHT

--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1421,6 +1421,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Smote of Synthetic Minority Oversampling Technique is een vorm van oversamplen, dit werkt door synthetische data aan te maken op basis van de al bestaande data. Het probeert zo een unbalanced data set weer balanced te maken."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
@@ -1442,13 +1449,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## InstanceHardnessThreshold"
+    "## Instance Hardness Threshold"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "IHT is een undersampling techniek dat samples met een lage kans verwijderd uit de dataset.\n",
+    "\n",
     "Dit werkt beter voor SVMs"
    ]
   },
