--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -103,7 +103,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Beschrijf in hoeverre de data voldoet aan de minimale vereisten voor Machine Learning met Scitkit Learn"
+    "### 1.2 Beschrijf in hoeverre de data voldoet aan de minimale vereisten voor Machine Learning met Scikit Learn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De data voldoet aan alle voorwaarde voor machine learning met Scikit learn.\n",
+    "\n",
+    "- Het zijn numerieke waardes\n",
+    "- Er zijn geen missende waardes\n",
+    "- Het staat in een dataframe"
    ]
   },
   {
@@ -581,13 +592,6 @@
    "source": [
     "# Kijken of er missende data in de testdata zit\n",
     "msno.matrix(test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "EDA: Voldoet aan de eisen, geen missende waarden etc."
    ]
   },
   {
