--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -602,13 +602,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Booleans omzetten naar 0 en 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Booleans omzetten naar 0 en 1\n",
-    "\n",
     "train = train.astype({col: int for col in train.columns if train[col].dtype == 'bool'})\n",
     "test = test.astype({col: int for col in test.columns if test[col].dtype == 'bool'})"
    ]
@@ -618,6 +623,13 @@
    "metadata": {},
    "source": [
     "### 1.3 Onderzoek de relaties tussen de onafhankelijke variabelen enerzijds en de afhankelijke variabele anderzijds. Gebruik hierbij passende visualisaties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We zien dat er tussen bepaalde kolommen een directe corrolatie is, bijvoorbeeld man en vrouw. Dit moet worden aangepast zodat er geen multicollineariteit is."
    ]
   },
   {
@@ -650,13 +662,6 @@
     "plt.figure(figsize=(25, 18))\n",
     "sns.heatmap(train.corr(), annot=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -976,7 +981,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "omdat extreme waardes bij age en "
+    "bmi heeft extreme outliers die niet mogelijk zijn terwijl extreem hoge avg_glucose_level waardes wel mogelijk zijn.\n",
+    "\n",
+    "We bereken de Z-score en verwijderen hier dan de outliers"
    ]
   },
   {
@@ -997,10 +1004,10 @@
     }
    ],
    "source": [
-    "num_cols = train[['bmi']]   # bmi heeft extreme outliers die niet mogelijk zijn terwijl extreem hoge avg_glucose_level waardes wel mogelijk zijn\n",
-    "z_scores = np.abs(stats.zscore(num_cols))   # Z-scores berekenen\n",
+    "bmi_col = train[['bmi']]   # bmi heeft extreme outliers die niet mogelijk zijn terwijl extreem hoge avg_glucose_level waardes wel mogelijk zijn\n",
+    "z_scores = np.abs(stats.zscore(bmi_col))   # Z-scores berekenen\n",
     "outliers = np.where(z_scores > 3)   # Outliers vinden\n",
-    "outliers_rows = num_cols[(z_scores > 3).any(axis=1)]   # Rijen met outliers vinden\n",
+    "outliers_rows = bmi_col[(z_scores > 3).any(axis=1)]   # Rijen met outliers vinden\n",
     "train = train.drop(outliers_rows.index)  # Rijen met outliers verwijderen"
    ]
   },
