--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -2238,11 +2238,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 2. Evaluatie"
    ]
@@ -2251,7 +2246,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Geef aan met welke “metrics”, voor deze vorm van machine learning, bepaalt kan worden hoe goed een model presteert. Toon de uitkomsten op deze metrics aan de hand van een zelf te kiezen machine learning algoritm"
+    "### 2.1 Geef aan met welke “metrics”, voor deze vorm van machine learning, bepaalt kan worden hoe goed een model presteert. Toon de uitkomsten op deze metrics aan de hand van een zelf te kiezen machine learning algoritme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zowel Binary Cross-Entropy als Hinge Loss kan gebruikt worden voor binaire classificatie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Voorbeeld:"
    ]
   },
   {
@@ -2285,7 +2294,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "De F1 score wordt gebruikt als je zowel hoge precision als recall wilt hebben. Accuracy meet ook hoeveel er correct predict zijn, echter werkt dit alleen goed met balanced data sets. Precision meet hoeveel positieve predictions correct zijn en recall meet hoeveel van de aanwezige positieve class samples correct zijn geindentificeerd.\n",
+    "\n",
+    "De ene metric komt dus te koste van de ander. De F1 score combineerd deze, hierdoor heb je minder last van de unbalanced dataset en kan je je model efficient optimaliseren."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2615,7 +2628,7 @@
     "param_grid = {'kernel': ['rbf'],\n",
     "              'C' : [1, 10, 50, 100, 150, 1000],\n",
     "#              'degree': [1, 2, 3], alleen relevant voor polynominal\n",
-    "              'gamma': ('scale', 'auto', 0.0001, 0.001, 0.01, 0.1, 1, 10),\n",
+    "#              'gamma': ('scale', 'auto', 0.0001, 0.001, 0.01, 0.1, 1, 10),\n",
     "#              'decision_function_shape': [ 'ovo', 'ovr'], Maakt niet uit voor binary probleem\n",
     "#              'break_ties': [True, False] geen multiclass probleem dus niet relevant\n",
     "              }\n",
