--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 597,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 600,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 601,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 601,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 603,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "[33206 rows x 22 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 610,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,17 +1451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "train.drop(columns = ['gender_Male' , 'gender_Other' , 'ever_married_No' , 'Residence_type_Rural' , 'id'] , inplace = True) # Kolommen verwijderen die geen invloed hebben op de target\n",
     "train.rename(columns = {'gender_Female' : 'gender'} , inplace = True) # Kolom hernoemen, 1 = Female, 0= Male"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1800,7 @@
        "[33206 rows x 17 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 612,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 615,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 616,
    "metadata": {},
    "outputs": [
     {
@@ -1905,15 +1906,40 @@
     "X = train.drop(columns=['stroke'])\n",
     "y = train['stroke']\n",
     "\n",
-    "iht = InstanceHardnessThreshold(random_state=42)\n",
+    "iht = InstanceHardnessThreshold(random_state=42, n_jobs=-1)\n",
     "X_resampled, y_resampled = iht.fit_resample(X, y)\n",
     "\n",
     "print(y_resampled.value_counts())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RepeatedEditedNearestNeighbours"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from imblearn.under_sampling import RepeatedEditedNearestNeighbours\n",
+    "#\n",
+    "#\n",
+    "#X = train.drop(columns=['stroke'])\n",
+    "#y = train['stroke']\n",
+    "#\n",
+    "#renn = RepeatedEditedNearestNeighbours(n_neighbors=19, kind_sel='all', n_jobs=-1)\n",
+    "#X_resampled, y_resampled = renn.fit_resample(X, y)\n",
+    "#\n",
+    "#print(y_resampled.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 618,
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2209,7 @@
        "max                 1.000000      1.000000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 618,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2210,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 619,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2228,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2477,12 +2503,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 621,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import train_test_split function\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "# Split dataset into training set and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42) # 70% training and 30% test\n"
@@ -2490,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 628,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2508,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [
     {
@@ -2526,6 +2553,38 @@
     "# Model Accuracy: how often is the classifier correct?\n",
     "print(\"F1 score:\",metrics.f1_score(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 630,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      0.99      6519\n",
+      "           1       0.75      0.48      0.58       149\n",
+      "\n",
+      "    accuracy                           0.98      6668\n",
+      "   macro avg       0.87      0.74      0.79      6668\n",
+      "weighted avg       0.98      0.98      0.98      6668\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2598,18 +2657,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 625,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import f1_score\n",
     "import scipy.stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 626,
    "metadata": {},
    "outputs": [
     {
@@ -2617,18 +2676,29 @@
      "output_type": "stream",
      "text": [
       "Best hyerparameters:\n",
-      " {'C': 100, 'gamma': 'auto', 'kernel': 'rbf'}\n",
-      "Best CV accuracy\n",
-      "Test set accuracy of best model: 0.985\n"
+      " {'C': 100, 'kernel': 'rbf'}\n",
+      "F1 Score 0.5315315315315315\n",
+      "classification_report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      0.99      6519\n",
+      "           1       0.81      0.40      0.53       149\n",
+      "\n",
+      "    accuracy                           0.98      6668\n",
+      "   macro avg       0.90      0.70      0.76      6668\n",
+      "weighted avg       0.98      0.98      0.98      6668\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'kernel': ['rbf'],\n",
-    "              'C' : [1, 10, 50, 100, 150, 1000],\n",
+    "              'C' : [0.1, 1, 10, 50, 100, 150,],\n",
+    "#              'class_weight': ['balanced', None],\n",
     "#              'degree': [1, 2, 3], alleen relevant voor polynominal\n",
     "#              'gamma': ('scale', 'auto', 0.0001, 0.001, 0.01, 0.1, 1, 10),\n",
+    "#              'probability': [True]\n",
     "#              'decision_function_shape': [ 'ovo', 'ovr'], Maakt niet uit voor binary probleem\n",
     "#              'break_ties': [True, False] geen multiclass probleem dus niet relevant\n",
     "              }\n",
@@ -2641,52 +2711,26 @@
     "\n",
     "grid_dt.fit(X_train, y_train)\n",
     "\n",
+    "best_svm = grid_dt.best_estimator_\n",
     "best_hyperparams = grid_dt.best_params_\n",
     "print('Best hyerparameters:\\n', best_hyperparams)\n",
     "\n",
-    "best_CV_score = grid_dt.best_score_\n",
-    "print('Best CV accuracy'.format(best_CV_score))\n",
-    "\n",
-    "best_model = grid_dt.best_estimator_\n",
-    "test_acc = best_model.score(X_test,y_test)\n",
-    "print(\"Test set accuracy of best model: {:.3f}\".format(test_acc))"
+    "#y_proba = best_svm.predict_proba(X_test)[:,1]\n",
+    "#y_predi_custom_threshold = (y_proba >= 0.5).astype(int)\n",
+    "print(\"F1 Score\", f1_score(y_test, y_pred))\n",
+    "print(\"classification_report:\\n\", classification_report(y_test, y_pred))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      1.00      0.99      6519\n",
-      "           1       0.75      0.48      0.58       149\n",
-      "\n",
-      "    accuracy                           0.98      6668\n",
-      "   macro avg       0.87      0.74      0.79      6668\n",
-      "weighted avg       0.98      0.98      0.98      6668\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 627,
    "metadata": {},
    "outputs": [],
    "source": [
     "SVM_pred = clf.predict(test)\n",
     "SVM_pred_df = test_data_ids.to_frame()\n",
     "SVM_pred_df['stroke'] = SVM_pred\n",
-    "SVM_pred_df.to_csv('SVM_pred.csv', index=False)"
+    "SVM_pred_df.to_csv('SVM_pred_11.csv', index=False)"
    ]
   },
   {
