--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1859,12 +1859,7 @@
    "source": [
     "Met logistic regression kun je de kans van een binair resultaat, dus bijvoorbeeld waar of niet waar, bepalen op basis van één of meer voorspellende variabelen met behulp van een logistische functie.\n",
     "\n",
-    "De binary cross-entropy of log loss meet hoe onzeker je model is over de juiste classificatie. Hoe lager de verliesfunctie, hoe beter het model de data classificeert. Het gebruik van deze functie leidt tot goede probabilistische voorspellingen.\n",
-    "\n",
-    "In deze functie:\n",
-    "- n het aantal voobeelden in je dataset.\n",
-    "- yi het werkelijke label van het i-de datapunt (0 of 1).\n",
-    "- y met het dakje de voorspelde kans."
+    "Als eerste moet je natuurlijk eerst de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' door lr = LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met lr.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: lr.predict(X_test). Als laatste moet je het resultaat weergeven, dit kan op verschillende manieren, zoals heatmaps en confusion matrix'. Hier is een voorbeeld van een confusion matrix: metrics.confusion_matrix(y_test, y_train), (Metrics moet eerst geïmporteerd worden)"
    ]
   },
   {
