--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -72,7 +72,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_20304\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19904\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 39, in <module>\n",
       "    from pandas.compat import (\n",
@@ -148,7 +148,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_20304\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19904\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -224,7 +224,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_20304\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19904\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -316,7 +316,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_20304\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19904\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1399,22 +1399,33 @@
     }
    ],
    "source": [
-    "from imblearn.over_sampling import SMOTE\n",
-    "\n",
-    "X = train.drop(columns=['stroke'])\n",
-    "y = train['stroke']\n",
-    "\n",
-    "smote = SMOTE(random_state=0)\n",
-    "X_resampled, y_resampled = smote.fit_resample(X, y)\n",
-    "\n",
-    "print(y_resampled.value_counts())"
+    "#from imblearn.over_sampling import SMOTE\n",
+    "#\n",
+    "#X = train.drop(columns=['stroke'])\n",
+    "#y = train['stroke']\n",
+    "#\n",
+    "#smote = SMOTE(random_state=0)\n",
+    "#X_resampled, y_resampled = smote.fit_resample(X, y)\n",
+    "#\n",
+    "#print(y_resampled.value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stroke\n",
+      "0    21711\n",
+      "1      515\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "#from imblearn.under_sampling import InstanceHardnessThreshold\n",
     "#\n",
@@ -1430,19 +1441,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stroke\n",
+      "0    32691\n",
+      "1    32529\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "#from imblearn.over_sampling import ADASYN\n",
-    "#\n",
-    "#X = train.drop(columns=['stroke'])\n",
-    "#y = train['stroke']\n",
-    "#\n",
-    "#oversample = ADASYN()\n",
-    "#X_resampled, y_resampled = oversample.fit_resample(X, y)\n",
-    "#\n",
-    "#print(y_resampled.value_counts())"
+    "from imblearn.over_sampling import ADASYN\n",
+    "\n",
+    "X = train.drop(columns=['stroke'])\n",
+    "y = train['stroke']\n",
+    "\n",
+    "oversample = ADASYN()\n",
+    "X_resampled, y_resampled = oversample.fit_resample(X, y)\n",
+    "\n",
+    "print(y_resampled.value_counts())"
    ]
   },
   {
@@ -1473,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,31 +1808,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1 Score: 0.8286975264292312\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn import metrics \n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import f1_score, confusion_matrix, ConfusionMatrixDisplay\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
-    "\n",
-    "dt = DecisionTreeClassifier(criterion='entropy', splitter = 'best', max_depth = 16, min_samples_split = 2, min_samples_leaf = 1, max_features = 12, random_state=42)\n",
-    "dt.fit(X_train, y_train)\n",
-    "y_pred = dt.predict(X_test)\n",
-    "print(\"F1 Score:\", metrics.f1_score(y_test, y_pred))\n",
+    "#from sklearn.tree import DecisionTreeClassifier\n",
+    "#from sklearn import metrics \n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "#from sklearn.metrics import f1_score, confusion_matrix, ConfusionMatrixDisplay\n",
+    "#from sklearn.model_selection import GridSearchCV\n",
+    "#from sklearn.metrics import classification_report\n",
+    "#\n",
+    "#X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
+    "#\n",
+    "#dt = DecisionTreeClassifier(criterion='entropy', splitter = 'best', max_depth = 16, min_samples_split = 2, min_samples_leaf = 1, max_features = 12, random_state=42)\n",
+    "#dt.fit(X_train, y_train)\n",
+    "#y_pred = dt.predict(X_test)\n",
+    "#print(\"F1 Score:\", metrics.f1_score(y_test, y_pred))\n",
     "\n",
     "#Beste kaggle score tot nu toe: 0.04147 (met smote)\n",
     "#dt = DecisionTreeClassifier(criterion='entropy', splitter = 'best', max_depth = 16, min_samples_split = 2, min_samples_leaf = 1, max_features = 12, random_state=42)\n",
@@ -1819,53 +1833,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.80      0.86      0.83      9789\n",
-      "           1       0.85      0.78      0.81      9826\n",
-      "\n",
-      "    accuracy                           0.82     19615\n",
-      "   macro avg       0.82      0.82      0.82     19615\n",
-      "weighted avg       0.82      0.82      0.82     19615\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "\n",
-    "print(classification_report(y_test, y_pred))"
+    "#from sklearn.metrics import classification_report\n",
+    "#\n",
+    "#\n",
+    "#print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#CSV aanmaken om in Kaggle te uploaden\n",
     "\n",
-    "Decision_pred = dt.predict(test)\n",
-    "Decision_pred_df = test_data_ids.to_frame()\n",
-    "Decision_pred_df['stroke'] = Decision_pred\n",
-    "Decision_pred_df.to_csv('Decision_pred_23.csv', index=False)"
+    "#Decision_pred = dt.predict(test)\n",
+    "#Decision_pred_df = test_data_ids.to_frame()\n",
+    "#Decision_pred_df['stroke'] = Decision_pred\n",
+    "#Decision_pred_df.to_csv('Decision_pred_23.csv', index=False)"
    ]
   },
   {
@@ -2010,7 +1999,7 @@
    "source": [
     "#X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
     "#\n",
-    "#rf = RandomForestClassifier(n_estimators=1, criterion='entropy', max_depth=15, min_samples_split=2, min_samples_leaf=1, max_features='sqrt')\n",
+    "#rf = RandomForestClassifier(n_estimators=1, criterion='entropy', max_depth=15, min_samples_split=2, min_samples_leaf=1, max_features='sqrt', random_state=42)\n",
     "#\n",
     "#rf.fit(X_train, y_train)\n",
     "#\n",
@@ -2018,7 +2007,7 @@
     "#\n",
     "#print(\"F1 Score:\", metrics.f1_score(y_test, y_pred))\n",
     "\n",
-    "#rf = RandomForestClassifier(n_estimators=1, criterion='entropy', max_depth=15, min_samples_split=2, min_samples_leaf=1, max_features='sqrt')\n",
+    "#rf = RandomForestClassifier(n_estimators=1, criterion='entropy', max_depth=15, min_samples_split=2, min_samples_leaf=1, max_features='sqrt'. random_state=42)\n",
     "#Beste kaggle score tot nu toe: 0.04503 (Adasyn Sampling)\n"
    ]
   },
@@ -2054,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2065,68 +2054,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:540: FitFailedWarning: \n",
+      "13200 fits failed out of a total of 79200.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "13200 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\base.py\", line 1466, in wrapper\n",
+      "    estimator._validate_params()\n",
+      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\base.py\", line 666, in _validate_params\n",
+      "    validate_parameter_constraints(\n",
+      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 95, in validate_parameter_constraints\n",
+      "    raise InvalidParameterError(\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'min_samples_split' parameter of GradientBoostingClassifier must be an int in the range [2, inf) or a float in the range (0.0, 1.0]. Got np.int64(1) instead.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1103: UserWarning: One or more of the test scores are non-finite: [nan nan nan ...  0.  0.  0.]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({'criterion': 'friedman_mse',\n",
+       "  'learning_rate': 0.1,\n",
+       "  'loss': 'log_loss',\n",
+       "  'max_depth': 10,\n",
+       "  'max_features': 'sqrt',\n",
+       "  'min_samples_leaf': np.int64(1),\n",
+       "  'min_samples_split': np.int64(6),\n",
+       "  'n_estimators': np.int64(6)},\n",
+       " np.float64(0.052683041104482506))"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#gbc = GradientBoostingClassifier()\n",
-    "#param_grid = {'loss': ['log_loss', 'exponential'], 'learning_rate': [0.1], 'n_estimators': np.arange(1,20),'criterion': ['friedman_mse', 'squared_error'], 'max_depth': [1,2,3,4,5,8,11,14,17,20], 'min_samples_split': np.arange(1,5), 'min_samples_leaf': np.arange(1,5), 'max_features': ['sqrt']}\n",
-    "#gbc_cv = GridSearchCV(estimator=gbc, param_grid=param_grid, cv=5, scoring='f1', n_jobs=-1)\n",
-    "#gbc_cv.fit(X, y) \n",
-    "#\n",
-    "#gbc_cv.best_params_, gbc_cv.best_score_\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import f1_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
-    "#\n",
-    "#gbc = GradientBoostingClassifier(loss = 'log_loss', learning_rate = 0.1, n_estimators = 7, criterion = 'friedman_mse', min_samples_split = 2, min_samples_leaf = 1, max_depth = 17, max_features = 'sqrt')\n",
-    "#\n",
-    "#gbc.fit(X_train, y_train)\n",
-    "#\n",
-    "#y_pred = gbc.predict(X_test)\n",
-    "#\n",
-    "#print(\"F1 Score:\", metrics.f1_score(y_test, y_pred))\n",
+    "gbc = GradientBoostingClassifier()\n",
+    "param_grid = {'loss': ['log_loss', 'exponential'], 'learning_rate': [0.1], 'n_estimators': np.arange(1,12),'criterion': ['friedman_mse', 'squared_error'], 'max_depth': [1,2,3,4,5,6,7,8,9,10], 'min_samples_split': np.arange(1,7), 'min_samples_leaf': np.arange(1,7), 'max_features': ['sqrt']}\n",
+    "gbc_cv = GridSearchCV(estimator=gbc, param_grid=param_grid, cv=5, scoring='f1', n_jobs=-1)\n",
+    "gbc_cv.fit(X, y) \n",
     "\n",
-    "#gbc = GradientBoostingClassifier(loss = 'log_loss', learning_rate = 0.1, n_estimators = 7, criterion = 'friedman_mse', min_samples_split = 2, min_samples_leaf = 1, max_depth = 17, max_features = 'sqrt')\n",
-    "#Kaggle best score: 0.4132 (SMOTE Sampling)\n"
+    "gbc_cv.best_params_, gbc_cv.best_score_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn.metrics import classification_report\n",
-    "#\n",
-    "#print(classification_report(y_test, y_pred))"
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.977474263581694\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
+    "\n",
+    "gbc = GradientBoostingClassifier(loss = 'log_loss', learning_rate = 0.1, n_estimators = 8, criterion = 'friedman_mse', min_samples_split = 6, min_samples_leaf = 1, max_depth = 15, max_features = 'sqrt', random_state=42)\n",
+    "\n",
+    "gbc.fit(X_train, y_train)\n",
+    "y_pred = gbc.predict(X_test)\n",
+    "\n",
+    "print(\"F1 Score:\", metrics.f1_score(y_test, y_pred))\n",
+    "\n",
+    "#gbc = GradientBoostingClassifier(loss = 'log_loss', learning_rate = 0.1, n_estimators = 7, criterion = 'friedman_mse', min_samples_split = 2, min_samples_leaf = 1, max_depth = 8, max_features = 'sqrt', random_state=42)\n",
+    "\n",
+    "#Kaggle best score: 0.09090 (adasys)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.96      0.96      9768\n",
+      "           1       0.96      0.96      0.96      9798\n",
+      "\n",
+      "    accuracy                           0.96     19566\n",
+      "   macro avg       0.96      0.96      0.96     19566\n",
+      "weighted avg       0.96      0.96      0.96     19566\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#gbc_pred = gbc.predict(test)\n",
-    "#gbc_pred_df = test_data_ids.to_frame()\n",
-    "#gbc_pred_df['stroke'] = gbc_pred\n",
-    "#gbc_pred_df.to_csv('gbc_pred_1.csv', index=False)"
+    "gbc_pred = gbc.predict(test)\n",
+    "gbc_pred_df = test_data_ids.to_frame()\n",
+    "gbc_pred_df['stroke'] = gbc_pred\n",
+    "gbc_pred_df.to_csv('gbc_pred_18.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stroke\n",
+       "0    8150\n",
+       "1     238\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_gbc = pd.read_csv('gbc_pred_18.csv')\n",
+    "\n",
+    "data_gbc['stroke'].value_counts()"
    ]
   },
   {
